Fix leave icon zero-height collapse from flex centering

--- a/src/Components/Common/IconComponent/IconComponent.module.css
+++ b/src/Components/Common/IconComponent/IconComponent.module.css
@@ -1,8 +1,11 @@
 .iconComponent {
     position: relative;
+    display: block;
     width: 100%;
     height: 100%;
     background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
   
 .frameDiv {
