--- a/src/Components/Common/MenuScreenLayout/MenuScreenLayout.module.css
+++ b/src/Components/Common/MenuScreenLayout/MenuScreenLayout.module.css
@@ -37,8 +37,5 @@
   right: 13%;
   height: 87px;
   width: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 10;
 }
